# SQLModel-example

./: .pre-commit-config.yaml  pyproject.toml
src/app/: main.py
