[project]
name = "SQLModel-example"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."
authors = [
    {name = "Atticus Zhou", email = "zhouge1831@gmail.com"}
]
maintainers = [
    {name = "Atticus Zhou", email = "zhouge1831@gmail.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "psycopg2-binary>=2.9.9",
    "sqlmodel>=0.0.22",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
]
